--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-我们从零开始
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>无标题文档</title>
+</head>
+
+<body>
+<h1>静夜思</h1>
+<form>
+<ul>床前明月光</ul>
+<ul>疑是地上霜</ul>
+</form>
+
+</body>
+</html>
+
